created component employee con su formulario sencillo que recupera el body en JSON, created component regEmployee.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,16 +12,11 @@
   <div fxFlex>
     <div fxLayout="column" fxLayout.gt-sm="row">
       <div fxFlex="70">
-        <h2>Our History</h2>
-        <p>Started in 2013, SSI quickly established itself as a safety icon par excellence in USA. With its
-          unique brand of world fusion safety that can be found nowhere else, it enjoys patronage from the
-          A-list clientele in USA. Featuring four of the best three-star Award CEO in the world, you never
-          know what will arrive on your mind the next time you visit us.</p>
-        <p>The enterprise traces its humble beginnings to <em>The BUILDING SEC CBA</em>, a successful chain
-          started by our CEO, Msc. Valentin Laime, that featured for the first time the world's best
-          enterprises in building safety.</p>
+        <h2>Quienes Somos!!!</h2>
+        <p>SSIngeniera SA, somos una empresa constructora que ofrece todo tipo de servicios relacionados al area de construccion civil,.</p>
+        <p>La empresa comenzo hace 10 años <em> CBA</em>, Nuestra empresa esta basada en 2 pilares fundamentales; compromiso y calidad.</p>
       </div>
-      <div fxFlex="30">
+      <!--<div fxFlex="30">
         <mat-card>
           <mat-card-header>
             <mat-card-title>
@@ -43,13 +38,12 @@
         </mat-card>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <div fxFlex>
     <mat-card>
       <blockquote>
-        <h3>You better cut the budget in four pieces because
-          I'm not willing enough to to invest in six.</h3>
+        <h3>LA CREATIVIDAD ES LA INTELIGENCIA DIVIRTIENDOSE!!!!.</h3>
         <footer>-- Carlos Gomez,
           <cite>The Wisdom of Carlos Gomez,
             Diversion Books, 2014</cite>
@@ -59,16 +53,16 @@
   </div>
 
 
-  <div fxFlex>
-    <h2>Employees </h2>
-    <mat-list dense>
-      <mat-list-item *ngFor="let employee of employees">
-        <img matListAvatar [src]="employee.image" alt="{{employee.name}}">
-        <span matLine>{{employee.name}}</span>
-        <span matLine>{{employee.jobPosition}}</span>
-        <span matLine>{{employee.jobDescription}}</span>
-      </mat-list-item>
-    </mat-list>
+      <!--<div fxFlex>
+        <h2> Organigrama </h2>
+        <mat-list dense>
+          <mat-list-item *ngFor="let organigrama of erganigramas">
+            <img matListAvatar [src]="organigramaE.image" alt="{{employee.name}}">
+            <span matLine>{{employee.name}}</span>
+            <span matLine>{{employee.jobPosition}}</span>
+            <span matLine>{{employee.jobDescription}}</span>
+          </mat-list-item>
+        </mat-list>-->
 
-  </div>
-</div>
+      </div>
+    </div>
