--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,13 +20,13 @@
         </mat-list>
       </div>
       <div fxFlex="50">
-        <h4>Our Address</h4>
+        <h4>Direccion</h4>
         <address style="text-size: 80%">
-          121, Dr. Drive <br> San Jose, California<br> MOUNTAIN VIEW<br>
-          <i class="fa fa-phone"></i>: +1 1234 5678<br>
-          <i class="fa fa-fax"></i>: +1 8765 4321<br>
+          Dir. Av Blanco Galingo km 2 <br> COCHABAMBA - BOLIVIA<br> <br>
+          <i class="fa fa-phone"></i>: 4345567-76452006<br>
+          <i class="fa fa-fax"></i>: 43455675<br>
           <i class="fa fa-envelope"></i>:
-          <a href="mailto:ssi-info@ssi.net">ssi-info@ssi.net</a>
+          <a href="mailto:ssi-info@ssi.net">ssiIngenieria@ssi.net</a>
         </address>
       </div>
     </div>
