--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,8 @@
   <span class="flex-spacer"></span>
 
   <a mat-button routerLink="/employee"><span class="fa fa-home fa-lg"></span> Employee</a>
+  <a mat-button routerLink="/company"><span class="fa fa-home fa-lg"></span> Company</a>
+
 
   <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
 </mat-toolbar>
@@ -21,10 +23,8 @@
      fxLayoutGap="10px">
 
   <div fxFlex fxFlex.gt-sm="50%">
-    <h1>SSI</h1>
-    <p>We take inspiration from the World's best safety practices, and create a unique fusion experience. Our awesome
-      safety protection items
-      will tickle your safety vision!</p>
+    <h1>SSIngenieria</h1>
+    <p>Somos una empresa constructora, que trabaja con las mejores practicas de seguridad!!!</p>
   </div>
   <div fxFlex fxFlex.gt-sm="20%">
     <img src="../../assets/images/logoEmpresa.jpg" alt="Logo" width="200" height="200">
