--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -44,44 +44,11 @@
       </mat-list-item>
     </mat-list>
 
+    <app-date-table></app-date-table>
 
 
-    <table >
-
-      <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-
-      <!-- Position Column -->
-      <!--<ng-container matColumnDef="position" class="mat-elevation-z8">-->
-        <!--<th mat-header-cell *matHeaderCellDef> No. </th>-->
-        <!--<td mat-cell *matCellDef="let element"> {{element.position}} </td>-->
-      <!--</ng-container>-->
-
-      <!--&lt;!&ndash; Name Column &ndash;&gt;-->
-      <!--<ng-container matColumnDef="name">-->
-        <!--<th mat-header-cell *matHeaderCellDef> Name </th>-->
-        <!--<td mat-cell *matCellDef="let element"> {{element.name}} </td>-->
-      <!--</ng-container>-->
-
-      <!--&lt;!&ndash; Weight Column &ndash;&gt;-->
-      <!--<ng-container matColumnDef="weight">-->
-        <!--<th mat-header-cell *matHeaderCellDef> Weight </th>-->
-        <!--<td mat-cell *matCellDef="let element"> {{element.weight}} </td>-->
-      <!--</ng-container>-->
-
-      <!--&lt;!&ndash; Symbol Column &ndash;&gt;-->
-      <!--<ng-container matColumnDef="symbol">-->
-        <!--<th mat-header-cell *matHeaderCellDef> Symbol </th>-->
-        <!--<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>-->
-      <!--</ng-container>-->
 
 
-      <tr>
-        <td>ljljl</td>
-        <td>jajaja</td>
-      </tr>
-
-    </table>
 
   </div>
 </div>
